# Software-Project-CTS-5

./: Qt.gitignore  README.md
code/: main
code/Old_Code/Production_Environment/Lastest-SP23/Staging_Environment_Recorverd/: CMakeLists.txt  backlog.ui  calendar.cpp  databasemanager.h  issuecreation.h  launchscreen.cpp  launchscreen.ui  pb_confluence_implemenation.h  pb_productbacklog_implementation.h  pb_sprint_implemenation.h  projectcreation.cpp  projectsadmin.h  registration_window.cpp  registration_window.h
code/Old_Code/SP23-OLD/code/SP23/: backlog.ui  main.cpp  parentboard.ui  projectcreation.cpp  registration_window.cpp  settings.h
code/Old_Code/SP23-OLD/code/build-SP23-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: qtcsettings.cmake
code/Old_Code/SP23-OLD/code/build-SP23-Imported_Kit_ad0710-Debug/: CMakeCache.txt
code/Old_Code/SP23-OLD/code/build-SP23-Imported_Kit_ce95cc-Debug/: qtcsettings.cmake
code/Old_Code/SP23-OLD/code/build-SP23-Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps
code/Old_Code/SP23-OLD/code/build-SP23-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  build.ninja
code/Old_Code/SP23-OLD/code/build-SP23-Qt_MinGW_64_bit-Debug/: CMakeCache.txt.prev
code/Production Environment/SP23/code/SP23/: mainwindow.cpp
code/Production Environment/SP23/code/build-SP23-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  cmake_install.cmake
code/Production_Environment/Lastest-SP23/Staging_Environment_Recorverd/: CMakeLists.txt  adminstrator.h  backlog.h  databasemanager.cpp  issuecreation.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  parentboard.cpp  parentboard.ui  pb_confluence_implemenation.cpp  pb_productbacklog_implementation.cpp  pb_sprint_implemenation.cpp  pb_taskboard_implemenation.cpp  pb_taskboard_implemenation.h  projectcreation.ui  qtunittest.cpp  qtunittest.h  registration_window.h  registration_window.ui
code/Production_Environment/Old-SP23/code/SP23/: backlog.ui  calendar.ui  confluence.ui  mainwindow.h  settings.h  taskboard.ui
code/Production_Environment/SP23/code/SP23/: CMakeLists.txt  backlog.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  registration_window.h  registration_window.ui  settings.ui  sprints.ui
code/Production_Environment/SP23/code/build-SP23-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log
code/Staging_Environment/Recovered/Staging_Environment_Recorverd/: CMakeLists.txt  TableAnimator.cpp  TableAnimator.h  adminstrator.cpp  adminstrator.h  adminstrator.ui  calendar.ui  confluence.h  customcalendarwidget.cpp  customcalendarwidget.h  databasefetcher.cpp  databasefetcher.h  databasemanager.cpp  databasemanager.h  email_notification.cpp  email_notification.h  hash_utils.cpp  hash_utils.h  launchscreen.cpp  launchscreen.h  launchscreen.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parentboard.cpp  parentboard.h  parentboard.ui  pb_calendar_implemenation.cpp  pb_calendar_implemenation.h  pb_calendar_implementation.cpp  pb_confluence_implemenation.cpp  pb_confluence_implemenation.h  pb_productbacklog_implementation.cpp  pb_productbacklog_implementation.h  pb_productbacklog_implementation_extension.cpp  pb_productbacklog_implementation_extension.h  pb_sprint_implemenation.cpp  pb_sprint_implemenation.h  pb_taskboard_implemenation.cpp  (+22 more)
code/Staging_Environment/Recovered/Staging_Environment_Recorverd/assets/: resources.qrc  send_email.py
code/Staging_Environment/Recovered/Staging_Environment_Recorverd/lib/: config.json
code/Staging_Environment/Recovered/database_backup_files/: backup_file.sql
code/Staging_Environment/SP23-OLD/code/SP23/: CMakeLists.txt.user.8227448  CMakeLists.txt.user.dee75ad  (+4 more)
code/Staging_Environment/SP23/code/SP23/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.9d9780f  CMakeLists.txt.user.f9f9d6b  backlog.cpp  backlog.ui  build.ninja  calendar.ui  cmake_install.cmake  confluence.ui  issuecreation.cpp  issuecreation.h  issuecreation.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  parentboard.h  projectcreation.h  projectcreation.ui  qtcsettings.cmake  registration_window.cpp  registration_window.h  registration_window.ui  settings.cpp  settings.ui  sprints.ui  sprints.ui.autosave
code/Staging_Environment/SP23/code/SP23/.cmake/api/v1/reply/: cache-v2-595809e04baa7e1cf456.json  codemodel-v2-846d23d6a28a67768a12.json  index-2023-11-14T13-19-17-0611.json
code/Staging_Environment/SP23/code/SP23/.qtc_clangd/: compile_commands.json
code/Staging_Environment/SP23/code/SP23/.qtc_clangd/.cache/clangd/index/: backlog.cpp.79716D60C6B6E6E2.idx  confluence.cpp.14B9E58DB730E40B.idx  main.cpp.B2DC378E3AF9E980.idx  mainwindow.cpp.7B50B95D4011C867.idx  mainwindow.h.B80BC692BA48A43A.idx  qmainwindow.h.D34E9994A5BEE26F.idx  qtmetamacros.h.F200024A7472CEBA.idx  registration_window.cpp.8816D453D9406139.idx  settings.cpp.0CF82CCA338612B3.idx  settings.h.E4DDD6AF4DCA2C01.idx
code/Staging_Environment/SP23/code/SP23/SP23_autogen/: deps
code/Staging_Environment/SP23/code/SP23/SP23_autogen/EWIEGA46WW/: moc_backlog.cpp.d  moc_calendar.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_registration_window.cpp.d  moc_settings.cpp.d  moc_sprints.cpp.d  moc_taskboard.cpp.d
code/Staging_Environment/SP23/code/SP23/SP23_autogen/include/: ui_parentboard.h  ui_projectcreation.h  ui_registration_window.h  ui_settings.h
documents/Build_Information/: Build Process.docx
documents/Inkrement 2/: SprintReviewInkrement2_2.docx
documents/Requirements Specification/: Scrummy - Risk list (3).xlsx
documents/Software_Project_Documents/3. Architecture and Design/: SCRUM_Backlog_1.xlsx
documents/Software_Project_Documents/Inkrement 2/: Jira.doc  SprintReview2_3.docx
documents/Software_Project_Documents/Release/: Info_about_Git_Repo.txt  TimeLog_(Ebtehal_Aldheeshy).xlsx  TimeLog_(Ruth).ods  TimeLog_(Wesley).xlsx
documents/Software_Project_Documents/Release/Timelogs/: TimeLog_(Aida Zhumiyeva).xlsx  TimeLog_(Citlalin Reyes Soto).xlsx  TimeLog_(Cosmin_Constantin_Andronescu).xlsx  TimeLog_(Keti).xlsx  TimeLog_(Muazzam_Bin_Aqeel).xlsx  TimeLog_(Wesley).xlsx
(+2144 files in other folders)
